# mast-mcp-prototype

./: .gitignore  README.md  mast.py  pyproject.toml
src/: exomast.py  server.py  server_http.py
tools/: exomast.py  observations.py
