[project]
name = "mast-mcp"
version = "0.1.0"
description = "Prototype MCP for MAST Access"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rpds-py==0.27.1",
    "fastmcp>=2.12.5",
    "astroquery>=0.4.11",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
